# DeepAudit

./: .env.example  .env.web  .gitignore  AGENT_ENHANCEMENTS.md  CODE_CLEANUP_SUMMARY.md  DEEP_AUDIT_INTEGRATION_SUMMARY.md  FRONTEND_FIX_PLAN.md  FRONTEND_FIX_SUMMARY.md  FRONTEND_REFACTOR.md  OPTIMIZATION_INTEGRATION_SUMMARY.md  README.md  REFACTOR_DOCUMENT.md  REFACTOR_PLAN.md  package-lock.json  package.json
.claude/: settings.local.json
agent-service/: .env.example  pytest.ini  requirements.txt  run.py
agent-service/app/: config.py  main.py
agent-service/app/agents/: analysis.py  base.py  orchestrator.py  recon.py  verification.py
agent-service/app/api/: agents.py  audit.py  auth.py  prompts.py  settings.py
agent-service/app/core/: agent_config.py  agent_registry.py  agent_state.py  audit_phase.py  auth.py  auth_middleware.py  cancel_coordinator.py  dataflow_analysis.py  dynamic_executor.py  error_classifier.py  execution_context.py  finding_dedup.py  graph_controller.py  (+8 more)
agent-service/prompts/: verification.yaml
agent-service/tests/: __init__.py  test_dataflow_analysis.py  test_error_classifier.py  test_execution_context.py
docs/: LLM_AGENT_ENHANCEMENT_PLAN.md
python-sidecar/: agent.py  ast_engine.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/diff/: engine.rs  git_integration.rs  mod.rs  types.rs
src-tauri/src/mcp/: mod.rs  service.rs
src/hooks/: useAgentStream.ts
src/lib/: graphLayout.ts
src/pages/: Dashboard.tsx
src/stores/: agentStore.ts  projectStore.ts  ruleStore.ts  settingsStore.ts
(+92 files in other folders)
