[package]
name = "deep-audit"
version = "0.1.0"
description = "DeepAudit Nexus"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tree-sitter = "0.23"
ignore = "0.4"
anyhow = "1"
thiserror = "1"
rayon = "1.10"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
# MCP dependencies
rmcp = { version = "0.8.0", features = ["server"] }
schemars = "0.8"
# Additional dependencies for AST processing
regex = "1.10"
walkdir = "2.4"
sha1 = "0.10"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
# Diff comparison dependencies
similar = { version = "2.5", features = ["text", "inline", "bytes"] }
dissimilar = "1.0"
# Text encoding support
encoding_rs = "0.8"
